CentralDeResultados: fix doc table horizontal alignment (remove flex on title cell)

--- a/apps/web-admin/src/pages/portal/CentralDeResultadosPage.css
+++ b/apps/web-admin/src/pages/portal/CentralDeResultadosPage.css
@@ -226,12 +226,15 @@
 }
 
 .cdr-doc-table__td--title {
-  display: flex;
-  align-items: center;
-  gap: var(--space-2);
   font-weight: var(--font-semibold);
   color: var(--color-gray-900);
   white-space: nowrap;
+  vertical-align: middle;
+}
+
+.cdr-doc-table__td--title .cdr-doc-item__icon {
+  vertical-align: middle;
+  margin-right: var(--space-2);
 }
 
 .cdr-doc-table__td--meta {
@@ -246,6 +249,7 @@
   width: 40px;
   padding-left: var(--space-4);
   padding-right: 0;
+  vertical-align: middle;
 }
 
 .cdr-checkbox {
